Removed the grid
Made pie representation first in the control panel
Made pie representation selected by default
# 0.00.15 (59324) Dec 13, 2011
Made 6 vertical bars exactly fit the width of the screen
Made pies exactly fit the width of the screen
Constrain the horizontal bar representation to fill the screen when there are 6 and to take up 2 rows
Fixed: Oddly, the circles look well centered and such when there are 6 "wholes" but 6 circles divided into "fifths" goes slightly off screen.
# 0.00.14 (59312) Dec 13, 2011
Improvements in Intro tab
Started Equivalence Lab
Removed "Representation" control panel text
Constrain denominator based on the numerator so that the entire number is less than or equal to 6
# 0.00.13 (59217) Dec 9, 2011
Added highlight for number line
Made number line maximum 6 instead of 12
Reduced the size of the number line dot from 6 to 5
Increased the size of the number line icon in the representation panel
Increased the size of the representation panel
Added borders for items in the representation panel
Increased font for representation and buttons/controls from 16 to 20
Limited the numerator based on the denominator so that the entire number is less than or equal to 6
# 0.00.12 (59189) Dec 8, 2011
Got rid of "click to toggle piece" feature
Rounded the corners for the fraction division bar
Increased pie size so that 6 pies fill the screen horizontally
Changed max denominator from 12 to 8
# 0.00.11 (58974) Dec 1, 2011
Added images from NP for spinner buttons
# 0.00.10 (58800) Nov 28, 2011
Increased the size of pie graphics
Add a border around number line circle
Highlight selected representation
Fixes for number line
# 0.00.09 (58684) Nov 16, 2011
Added more revisions for intro tab
Matching game: Added horizontal and vertical bars
# 0.00.08 (58036) Oct 26, 2011
Matching game: Removed decimals
# 0.00.07 (58023) Oct 26, 2011
Matching game: Added "six plus signs pattern"
Matching game: Added grid pattern